Sun Aug 17 14:44:57 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* import.c (add_rcs_file): Add comment about -k overriding wrappers.

Sat Aug 16 18:09:05 1997   Martin Sjoelin <martin.sjoelin@ubs.ch>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* import.c (add_rcs_file): Before opening the input file
	when importing, if options is binary, open the file in
	binary mode.

1997-08-16  enami tsugutomo  <enami@ba2.so-net.or.jp>

	* sanity.sh (mcopy): Unset CVSWRAPPERS last of all.

Fri Aug 15 11:11:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add_directory): Copy default file attributes from the
	parent directory to the directory we are creating.
	* fileattr.h, fileattr.c (fileattr_getall, fileattr_setall):
	New functions, in support of above.
	* fileattr.c (fileattr_free): Add comment about fileattr_write
	maybe not clearing attrs_modified.
	* sanity.sh (watch4): New test, tests for above fix.

Thu Aug 14 11:08:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (merge_file, join_file): If wrap_merge_is_copy, treat
	files as nonmergeable (as we had been treating binary files).
	(join_file, update_fileproc): Remove previous wrap_merge_is_copy
	cruft.
	* sanity.sh (mcopy): New tests, test for above fix.
	(binfiles2): New tests binfiles2-9a-* correct an oversight.
	(binfiles, binfiles2): Adjust to reflect wording change from
	"binary file" to "nonmergeable file".
	(mwrap): Adjust tests mwrap-8 through mwrap-10 for new behavior.

	* main.c (main): Reword copyright notices to include the latest
	year, to refer to "other authors" in addition to the ones listed,
	and to be more concisely formatted.

Wed Aug 13 13:50:00 1997  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Replace hard-coded directory with ${TESTDIR}, add
	join3 to default tests

Wed Aug 13 11:42:24 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c: Adjust comment to reflect progress on removing RCS
	execs outside this file.
